--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Steeplejack | NodeJS with less faff
+title: ":: Steeplejack"
 email: your-email@domain.com
 description: >
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/"
+baseurl: ""
 url: ""
 github_username:  steeplejack-js
 
@@ -15,3 +15,9 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
+
+navbar:
+  - url: /url1
+    title: title1
+  - url: /url2
+    title: title2
