--- a/_data/features.yml
+++ b/_data/features.yml
@@ -48,7 +48,7 @@
   description: |
     Simple is always better and what's simpler than having route files describe the URL they're defining?
 
-    Callback hell is a thing of the past because all the route endpoints resolve a promise. And, if you really need a
+    Callback hell is a thing of the past because all the route endpoints resolve as a promise. And, if you really need a
     callback, passing three arguments into your route endpoint will get you what you want.
   code:
     - lang: javascript
