--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/steeplejack-js/steeplejack-js.github.io#readme",
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1"
   }
 }
