--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,26 @@ colors:
   api: warning
   concepts: success
   getting-started: danger
+
+badges:
+  - badge: https://img.shields.io/badge/GITTER-JOIN%20CHAT%20%E2%86%92-1DCE73.svg?style=flat
+    name: Gitter
+    url: https://gitter.im/steeplejack-js
+  - badge: https://img.shields.io/npm/v/steeplejack.svg?style=flat
+    name: Node Version
+    url: https://www.npmjs.com/package/steeplejack
+  - badge: https://img.shields.io/badge/node.js-%3E%3D_4.0-brightgreen.svg?style=flat
+    name: Downloads
+    url: https://npmjs.org/package/steeplejack
+  - badge: https://img.shields.io/travis/steeplejack-js/steeplejack/master.svg?style=flat
+    name: TravisCI
+    url: https://travis-ci.org/steeplejack-js/steeplejack
+  - badge: https://www.bithound.io/github/steeplejack-js/steeplejack/badges/score.svg
+    name: Quality
+    url: https://www.bithound.io/github/steeplejack-js/steeplejack
+  - badge: https://img.shields.io/david/steeplejack-js/steeplejack.svg?style=flat
+    name: Dependencies
+    url: https://david-dm.org/steeplejack-js/steeplejack
+  - badge: https://img.shields.io/david/dev/steeplejack-js/steeplejack.svg?style=flat
+    name: Dev Dependencies
+    url: https://david-dm.org/steeplejack-js/steeplejack#info=devDependencies&view=table
