--- a/_data/features.yml
+++ b/_data/features.yml
@@ -88,9 +88,14 @@
         });
 
         exports.inject = {
-            route: {
-                export: 'http'
-            }
+          route: {
+            export: 'http',
+            deps: []
+          },
+          socket: {
+            export: 'socket',
+            deps: []
+          }
         };
 
 - title: Model your data
